--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+
+}
+
+
+.container{
+  width: 100%;
+  height: 100vh;
+ background-color: rgb(34, 34, 34);
+}
+
+/*configurações do header*/
+
